--- a/src/demo3.html
+++ b/src/demo3.html
@@ -15,11 +15,6 @@
     <link href="css/site.css" rel="stylesheet" />
     <style type="text/css">
 
-        .tab-content {
-            border-bottom: 1px solid #ddd;
-            padding: 10px;
-        }
-
         .icon-glyph-3 {
             background-image: url('css/method.png');
         }
@@ -27,7 +22,7 @@
     </style>
     <script type="text/javascript">
 
-        $(function ()
+        function demo()
         {
             // code
             var $editor3 = $('#editor3');
@@ -53,10 +48,44 @@
                 ];
                 intellisense3.setDeclarations(data);
             });
+        }
 
-            ace.edit('htmlEditor').getSession().setMode("ace/mode/html");
-            ace.edit('cssEditor').getSession().setMode("ace/mode/css");
-            ace.edit('javascriptEditor').getSession().setMode("ace/mode/javascript");
+        function formatScript(script)
+        {
+            var whiteSpaceCount = 0;
+            var lines = script.split('\n');
+            lines = lines.splice(2, lines.length - 3);
+            for (var i in lines[0])
+            {
+                var c = lines[0][i];
+                if (c !== ' ')
+                {
+                    break;
+                }
+                whiteSpaceCount++;
+            }
+            lines = lines.map(function (item)
+            {
+                return item.substring(whiteSpaceCount);
+            });
+            return lines.join('\n');
+        }
+
+        $(function ()
+        {
+            var htmlEditor = ace.edit('htmlEditor');
+            htmlEditor.getSession().setMode("ace/mode/html");
+            htmlEditor.setValue($('#demoHtml').get(0).innerHTML);
+
+            var cssEditor = ace.edit('cssEditor');
+            cssEditor.getSession().setMode("ace/mode/css");
+            cssEditor.setValue(formatScript($('style').last().get(0).innerHTML));
+
+            var jsEditor = ace.edit('javascriptEditor');
+            jsEditor.getSession().setMode("ace/mode/javascript");
+            jsEditor.setValue(formatScript(demo.toString()));
+
+            demo();
         });
     </script>
 </head>
@@ -112,48 +141,17 @@
                     <em>The data shown is hard coded.</em>
                 </p>
                 <div>Type <strong>`.`</strong></div>
-                <textarea id="editor3" rows="10" cols="80"></textarea>
+                <div id="demoHtml"><textarea id="editor3" rows="10" cols="80"></textarea></div>
             </div>
 
             <div class="tab-pane fade" id="js">
-
-                <div id="javascriptEditor" style="width: 100%; height: 400px;">
-// code
-var $editor3 = $('#editor3');
-var intellisense3 = new TextBoxIntellisense('editor3');
-intellisense3.getDecls().setFilterMode('contains');
-intellisense3.addDeclarationTrigger({ keyCode: 190 });
-intellisense3.addDeclarationTrigger({ keyCode: 32, ctrlKey: true, preventDefault: true });
-intellisense3.onDeclaration(function (item)
-{
-    var data = [
-        { name: 'Item #1', value: '``Item #1``', documentation: 'The first item' },
-        { name: 'Item #2', value: '``Item #2``', documentation: 'The second item' },
-        { name: 'Item #3', value: '``Item #3``', documentation: 'The third item' },
-        { name: 'Item #4', value: '``Item #4``', documentation: 'The fourth item' },
-        { name: 'Item #5', value: '``Item #5``', documentation: 'The fifth item' },
-        { name: 'Item #6', value: '``Item #6``', documentation: 'The sixth item' },
-        { name: 'Item #7', value: '``Item #7``', documentation: 'The seventh item' },
-        { name: 'Item #8', value: '``Item #8``', documentation: 'The eighth item' },
-        { name: 'Item #9', value: '``Item #9``', documentation: 'The ningth item' },
-        { name: 'Item #10', value: '``Item #10``', documentation: 'The tenth item' },
-        { name: 'Item #11', value: '``Item #11``', documentation: 'The eleventh item' },
-        { name: 'Item #12', value: '``Item #12``', documentation: 'The twelvth item' }
-    ];
-    intellisense3.setDeclarations(data);
-});
-                </div>
-
+                <div id="javascriptEditor" style="width: 100%; height: 400px;"></div>
             </div>
             <div class="tab-pane fade" id="html">
-                <div id="htmlEditor" style="width: 100%; height: 400px;">&lt;textarea id="editor3" rows="10" cols="80"&gt;&lt;/textarea&gt;</div>
+                <div id="htmlEditor" style="width: 100%; height: 400px;"></div>
             </div>
             <div class="tab-pane fade" id="css">
-                <div id="cssEditor" style="width: 100%; height: 400px;">
-                    .icon-glyph-3 {
-                    background-image: url('css/method.png');
-                    }
-                </div>
+                <div id="cssEditor" style="width: 100%; height: 400px;"></div>
             </div>
         </div>
 
